// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordReset /> rendering should render correctly 1`] = `
<div>
  <div
    class="container content"
    id="reset-password"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password reset form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="fieldset"
          >
            <div
              class="row"
            >
              <label
                for="input"
              >
                Email, phone number or username
              </label>
              <input
                autocomplete="input"
                class="input "
                id="input"
                name="input"
                placeholder="enter email, phone number or username"
                required=""
                title="enter valid email address, an username or a phone number"
                type="text"
                value=""
              />
            </div>
            <div
              class="row submit"
            >
              <input
                class="button full"
                type="submit"
                value="Reset My Password"
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support@openwisp.org"
            >
              support@openwisp.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordReset /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="reset-password"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password reset form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="fieldset"
          >
            <div
              class="row"
            >
              <label
                for="input"
              >
                USERNAME_LOG_LBL
              </label>
              <input
                autocomplete="input"
                class="input "
                id="input"
                name="input"
                placeholder="USERNAME_LOG_PHOLD"
                required=""
                title="USERNAME_LOG_TITL"
                type="text"
                value=""
              />
            </div>
            <div
              class="row submit"
            >
              <input
                class="button full"
                type="submit"
                value="PWD_RESET_BTN"
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              EMAIL
              :
            </span>
            <a
              class="link"
              href="mailto:support@openwisp.org"
            >
              support@openwisp.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              HELPDESK
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
